--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Portfolio - Bedimcode</title>
+        <title>Portfolio - Aernma</title>
     </head>
     <body>
         <!--=============== HEADER PROFILE ===============-->
@@ -47,21 +47,21 @@
 
                 <div class="profile__info grid">
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">7</h3>
+                        <h3 class="profile__info-number">Graphic</h3>
                         <p class="profile__info-description">
-                            Years of <br> work
+                            Designer <br> 
                         </p>
                     </div>
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">100</h3>
+                        <h3 class="profile__info-number">Ilustration</h3>
                         <p class="profile__info-description">
-                            Completed <br> projects
+                            Designer <br> 
                         </p>
                     </div>
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">90</h3>
+                        <h3 class="profile__info-number">UX</h3>
                         <p class="profile__info-description">
-                            Satisfied <br> customers
+                            Designer <br> 
                         </p>
                     </div>
                 </div>
