--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </p>
                     </div>
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">UX</h3>
+                        <h3 class="profile__info-number">UI</h3>
                         <p class="profile__info-description">
                             Designer <br> 
                         </p>
