--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                     <h2 class="profile__name">Ade Rian Maulana</h2>
                     
-                    <h3 class="profile__profession">Indonesia</h3>
+                    <h3 class="profile__profession">Central Java - Indonesia</h3>
 
                     <ul class="profile__social">
                         <a href="https://www.instagram.com/byaernma/" target="_blank" class="profile__social-link">
@@ -61,9 +61,9 @@
                         </p>
                     </div>
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">UI</h3>
+                        <h3 class="profile__info-number">UI & UX</h3>
                         <p class="profile__info-description">
-                            Designer <br> 
+                            Enthusiast <br> 
                         </p>
                     </div>
                 </div>
